acá se agrega un nuevoparrafo en color rojo

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,10 @@
                 <p>Y este es el parrafo de inicio donde vamos a ver
                     las cosas increibles que se pueden hacer con ramas.
                 </p>
+                <p id="parrafo">
+                    Este es un cambio de prueba para comprobar el funcionamiento
+                    de las distintas ramas de git
+                </p>
             </div>
         </div>
     </body>
