se agrega un parrafo para denotar la mezcla realizada con el merge

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,11 @@
                 <p>Y este es el parrafo de inicio donde vamos a ver
                     las cosas increibles que se pueden hacer con ramas.
                 </p>
+                <p id="parrafo_verde">
+                    Hola, este es un parrafo verde que lo que 
+                    hace es denotar que se mezclaron los cambios en git
+                    con un merge entre cabecera y master (main)
+                </p>
             </div>
         </div>
     </body>
