--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            El titulo del post 
+            Nuevo titulo para el post
         </title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
